syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc.client";
option java_outer_classname = "GreetingProto";
option objc_class_prefix = "HLW";
import "google/protobuf/empty.proto";
package client;

message addUserRequest{
  string firstName = 1;
  string secondName = 2;
  string email = 3;
  string password = 4;
}

message addUserResponse{
  bool code = 1;
}

message containsUserRequest{
  string email = 1;
}

message containsUserResponse{
  bool code = 1;
}

message containsPasswordRequest{
  string email = 1;
  string password = 2;
}

message containsPasswordResponse{
  bool code = 1;
}

message getUserRequest{
  string login = 1;
}

message getUserResponse{
  string firstName = 1;
  string secondName = 2;
  string email = 3;
  string password = 4;
}

message getUserTracksRequest{
  string login = 1;
}

message getUserTracksResponse{
  repeated string name = 1;
  repeated string author = 2;
  repeated string url = 3;
  repeated int32 id = 4;
}

message addTrackToUserRequest{
  string login = 1;
  string name = 2;
  string author = 3;
  string url = 4;
  int32 id = 5;
}

message addTrackToUserResponse{
  bool code = 1;
}

message getDefaultTracksResponse{
  repeated string name = 1;
  repeated string author = 2;
  repeated string url = 3;
  repeated int32 id = 4;
}

message getAllUserEmailsResponse{
  repeated string name = 1;
}

message deleteTrackRequest{
  string login = 1;
}

message deleteTrackResponse{
  bool code = 1;
}

message addLikeRequest{
  string login = 1;
  int32 id = 2;
}

message addLikeResponse{
  bool code = 1;
}

message removeLikeRequest{
  string login = 1;
  int32 id = 2;
}

message removeLikeResponse{
  bool code = 1;
}

message getLikedTracksRequest{
  string login = 1;
}

message getLikedTracksResponse{
  repeated string name = 1;
  repeated string author = 2;
  repeated string url = 3;
  repeated int32 id = 4;
}

service GreetingService {

  rpc addUser(addUserRequest) returns (addUserResponse) {}

  rpc containsUser(containsUserRequest) returns (containsUserResponse) {}

  rpc containsPassword(containsPasswordRequest) returns (containsPasswordResponse) {}

  rpc getUser(getUserRequest) returns (getUserResponse) {}

  rpc getUserTracks(getUserTracksRequest) returns (getUserTracksResponse) {}

  rpc addTrackToUser(addTrackToUserRequest) returns (addTrackToUserResponse) {}

  rpc getDefaultTracks(google.protobuf.Empty) returns (getDefaultTracksResponse) {}

  rpc getAllUserEmails(google.protobuf.Empty) returns (getAllUserEmailsResponse) {}

  rpc deleteTrack(deleteTrackRequest) returns (deleteTrackResponse) {}

  rpc addLike(addLikeRequest) returns (addLikeResponse) {}

  rpc removeLike(removeLikeRequest) returns (removeLikeResponse) {}

  rpc getLikedTracks(getLikedTracksRequest) returns (getLikedTracksResponse) {}

}